# AIS2105_3DoF

./: CMakeLists.txt  CameraTransformations  InverseKinematicsVisualizer.m  README.md  package.xml  pixelPoint_to_realWordPoint.m
Arduino_handler/: CMakeLists.txt  package.xml
Arduino_handler/src/: Joint_publisher.cpp  Joint_tester.cpp
FinishedRobMek/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
FinishedRobMek/config/: display.rviz
FinishedRobMek/include/arduino_driver/: arduino_driver.hpp  arduino_serial.hpp  servo_motor.hpp
FinishedRobMek/launch/: arduino_driver.launch.py  display.launch.py
FinishedRobMek/src/: Joint_tester.cpp  arduino_driver.cpp  contour.cpp  hough.cpp  joint_publisher.cpp  launcher.cpp  platform_simulator.cpp  preprocess.cpp  regulator.cpp
FinishedRobMek/urdf/: 3dof_platform.urdf  arduino_driver.urdf.xacro
Pub-Sub/: -Kamera-PID  CMakeList.txt  Publisher Kamera-PID  Subscriber PID  regulator.cpp  working_matrix_multiplication
almostFinish/: CMakeLists.txt  package.xml  readme.txt
almostFinish/src/: camera_kinematics.cpp  contour.cpp  launcher.cpp  regulator.cpp  regulator_functions.cpp
arduino/: ros2_motor_driver.ino
config/: arduino_controllers.yaml  test_goal_positions.yaml
dof_platform/: CMakeLists.txt  package.xml
dof_platform/src/: camera_topic.cpp  canny_edge_detection.cpp  hough.cpp  object_tracker.cpp  preprocess.cpp  ros2 cam
håvard/dof_platform_ogga/: CMakeLists.txt  package.xml
håvard/dof_platform_ogga/src/: Servo_ang.cpp  canny_edge_detection.cpp  hough.cpp  launcher.cpp  preprocess.cpp  regulator.cpp  regulator_functions.cpp
include/arduino_driver/: visibility_control.h
launch/: arduino_driver.launch.py  test_driver.launch.py
marianne/: pid-txt
marianne/dof_platform/: CMakeLists.txt  package.xml
marianne/dof_platform/src/: camera_topic.cpp  canny_edge_detection.cpp  contourPublish.cpp  hough.cpp  object_tracker.cpp  preprocess.cpp
matlab/: matlab.mat
my_3dof_platform/: CMakeLists.txt  package.xml
my_3dof_platform/launch/: display.launch.py
my_3dof_platform/rollandpitch/: CMakeLists.txt  package.xml
my_3dof_platform/src/: create_xacro.cpp
my_3dof_platform/urdf/: 3dof_platform.xacro
ros2_control/: arduino_driver.ros2_control.xacro
src/: arduino_driver.cpp
surface/workspaces/: readme.txt
surface/workspaces/src/sub_cord/: package.xml
surface/workspaces/src/sub_cord/src/: MatrixMultiplication.cpp  publisher_member_function.cpp
urdf/: arduino_driver.urdf.xacro
working_finished_almost/: CMakeLists.txt
working_finished_almost/src/: camera_kinematics.cpp  contour.cpp  hough.cpp  launcher.cpp  preprocess.cpp  regulator.cpp
