<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_hell</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="loooooooooool@lol.com">lol</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
    <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
   <depend>trajectory_msgs</depend>
     <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
   <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
   <build_depend>rviz2</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
