<?xml version="1.0"?>
<package format="3">
  <name>my_3dof_platform</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dbjerkas@todo.todo">dbjerkas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add these lines for necessary dependencies -->
  <build_depend>rviz2</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

